[tool.poetry]
name = "ninja-backend"
version = "0.1.0"
description = ""
authors = ["dinakar17 <85105044+dinakar17@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.scripts]
post_install = "scripts.post_install:main"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
django-ninja = "^1.6.2"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.11"
djangorestframework-simplejwt = "^5.5.1"
django-cors-headers = "^4.9.0"
pillow = "^12.1.1"
django-storages = {extras = ["boto3"], version = "^1.14.6"}
gunicorn = "^25.2.0"
waitress = "^3.0.2"
whitenoise = "^6.12.0"
dj-database-url = "^2.2.0"
faker = "^26.0.0"
django-ratelimit = "^4.1.0"
celery = "^5.6.3"
redis = {extras = ["hiredis"], version = "^7.4.0"}
pydenticon = "^0.3.1"
django-redis = "^6.0.0"
channels = "^4.3.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
daphne = "^4.2.1"
channels-redis = "^4.3.0"
tornado = "^6.5.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
